[package]
name = "advent_of_code_2019"
version = "0.1.0"
authors = ["alcroito <placinta@gmail.com>"]
edition = "2018"

[lib]
name = "advent"
path = "src/lib.rs"

[[bin]]
name = "d1"
path = "src/d1.rs"

[[bin]]
name = "d2"
path = "src/d2.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.2.1"

